# stair-detection-openni

./: .gitignore  CMakeLists.txt  CMakeLists.txt_tailei  CMakeLists.txt~  compile_commands.json  incloud_gray.pcd  l  local_borders_0.pcd  stair_detect.sh  stairs_parameters.yaml  tags
chair_mainloop/: .CMakeLists.txt.swp  .genericstate.h.swo  .genericstate.h.swp  .machine.cpp.swp  .machine.h.swo  .machine.h.swp  .main.cpp.swp  CMakeLists.txt  StateMachineMyFrame.cpp  StateMachineMyFrame.h  genericstate.h  machine.cpp  machine.h  main.cpp  makefile~  sendcmd  sendcmd.c  serial_cmd.h  stateMachine.cpp  stateMachine.h
chair_mainloop/ser_api/: makefile  sendcmd  sendcmd.c  serial_cmd.c
include/pcl/apps/: .fast_meshing.h.swp  .stairdetectiondemo.h.swp  .stairdetectionlocal.h.swp  stairdetectiondemo.h  stairdetectionlocal.h  stairdetector.h
include/pcl/histogram/: linesegment3dhistogram.h
include/pcl/models/: .localmodel.h.swp  edges2planesfactory.h  globalmodel.h  localmodelfactory.h
include/pcl/segmentation/: .planesegmentation.h.swp  region_segmentation.h
include/pcl/surface/: surface_functions.h
include/pcl/types/: .plane3d.h.swp  plane3d.h  tread.h
src/pcl/apps/: .stairdetectorlocalXtion.cpp.swp  .stairdetectorlocalpcds.cpp.swp  .stairdetectorpcds.cpp.swp  ground_end_detection.cpp  ground_only.cpp  stairdetection_tailei.cpp  stairdetector_tailei.cpp  stairdetectorlocalXtion.cpp  stairdetectorlocalpcds.cpp  stairdetectorpcds.cpp  table_detection.cpp
wxGui/: .UIMyFrame1.cpp.swp  .UIMyFrame1.h.swp  UIMyFrame1.cpp  UIMyFrame1.h  app  app.cpp  freeUI.cpp  freeUI.h  gui.fbp  gui.fbp.bak  makefile  makefile~
